2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* delay/delay.c, score/ispsh7032.c: Removed warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* delay/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* sci/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* score/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-04-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* score/cpu_asm.c: Adapt inline asm to gcc-3.0.4.

2001-04-03	Joel Sherrill <joel@OARcorp.com>

	* Per PR94, all rtems/score/CPUtypes.h are named rtems/score/types.h.
	* include/ispsh7032.h, score/ispsh7032.c: Account for name change.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* delay/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* sci/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* score/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* timer/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Remove EXTRA_DIST.

2001-10-12	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, delay/delay.c, include/iosh7032.h,
	include/ispsh7032.h, include/sci.h, include/sh7_pfc.h,
	include/sh7_sci.h, sci/sci.c, score/cpu_asm.c, score/ispsh7032.c,
	timer/timer.c: Fixed typo.
2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Use 'TMPINSTALL_FILES ='.
