@@ -1,3 +1,9 @@
+2002-11-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Merge in include/Makefile.am.
+	* include/Makefile.am: Remove.
+	* configure.ac: Reflect changes above.
+
 2002-11-01	Joel Sherrill <joel@OARcorp.com>
 
 	* delay/delay.c, score/ispsh7032.c: Removed warnings.
